# flutter_rust_app

./: .gitignore  LICENSE  README.md  ndk.sh  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/sakari/flutter_rust_app/: MainActivity.kt  RustGreetings.kt
cargo/: Cargo.toml  build.sh  build_android.sh  build_ios.sh
cargo/src/: greetings.h  lib.rs
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  RustGreetings.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
middleware/: Cargo.toml  build_android.sh  build_ios.sh
middleware/src/: middleware.h
test/: widget_test.dart
